prac/monitoring-k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - host: grafana.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80

    - host: prometheus.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-kube-prometheus-stack-prometheus
                port:
                  number: 9090
